force-app/main/default/objects/ampi__Nav_Bar__c/ampi__Nav_Bar__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>Nav Bar</label>
</CustomObject>