force-app/main/default/objects/ampi__Nav_Bar__c/fields/ampi__Page_API_Name__c.field-meta.xml
<CustomField>
    <fullName>ampi__Page_API_Name__c</fullName>
    <label>Page API Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>