force-app/main/default/objects/ampi__Nav_Bar__c/fields/ampi__Parameters__c.field-meta.xml
<CustomField>
    <fullName>ampi__Parameters__c</fullName>
    <label>Parameters</label>
    <type>TextArea</type>
</CustomField>