force-app/main/default/objects/ampi__Nav_Bar__c/fields/ampi__Title__c.field-meta.xml
<CustomField>
    <fullName>ampi__Title__c</fullName>
    <label>Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>