force-app/main/default/objects/ampi__Nav_Bar__c/fields/ampi__Unique_Key__c.field-meta.xml
<CustomField>
    <fullName>ampi__Unique_Key__c</fullName>
    <label>Unique Key</label>
    <length>5</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>